Postgraduate Program in Multi Cloud Architecture & DevOps

--- a/Vertual_env.ipynb
+++ b/Vertual_env.ipynb
@@ -54,55 +54,37 @@
     "✅ Step 1: Add conda to your PATH\n",
     "Assuming you installed it to:\n",
     "\n",
-    "bash\n",
-    "Copy\n",
-    "Edit\n",
+    "\n",
     "/media/deehub/6355e288-ba65-4826-82a0-cfdd4313de42/miniconda3\n",
+    "\n",
     "Run this:\n",
     "\n",
-    "bash\n",
-    "Copy\n",
-    "Edit\n",
     "export PATH=\"/media/deehub/6355e288-ba65-4826-82a0-cfdd4313de42/miniconda3/bin:$PATH\"\n",
+    "\n",
     "Now test it:\n",
     "\n",
-    "bash\n",
-    "Copy\n",
-    "Edit\n",
     "conda --version\n",
     "You should see something like:\n",
     "\n",
     "nginx\n",
-    "Copy\n",
-    "Edit\n",
+    "\n",
     "conda 24.x.x\n",
+    "\n",
     "✅ Step 2: Initialize conda shell hooks\n",
     "Run:\n",
     "\n",
-    "bash\n",
-    "Copy\n",
-    "Edit\n",
     "conda init\n",
     "This modifies your shell config (e.g., .bashrc, .zshrc) so conda activate works properly.\n",
     "\n",
     "Then restart your terminal or run:\n",
     "\n",
-    "bash\n",
-    "Copy\n",
-    "Edit\n",
     "source ~/.bashrc\n",
     "✅ Step 3: Activate a conda environment\n",
     "To activate the base environment:\n",
     "\n",
-    "bash\n",
-    "Copy\n",
-    "Edit\n",
     "conda activate\n",
     "Or activate a specific env:\n",
     "\n",
-    "bash\n",
-    "Copy\n",
-    "Edit\n",
     "conda activate myenv"
    ]
   },
@@ -198,6 +180,22 @@
     "CopyEdit\n",
     "docker run hello-world\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08641ff4",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5adca3f",
+   "metadata": {},
+   "source": [
+    "To install all Python packages listed in a requirements.txt file via the terminal, simply run:\n",
+    "\n",
+    "                    pip install -r requirements.txt\n"
    ]
   },
   {
