mysql-workbench-community

--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -70,6 +70,128 @@
     "  \n",
     "### app.run(host='0.0.0.0', port=5050, debug=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ccb7b2b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ab4a95e",
+   "metadata": {},
+   "source": [
+    "# MySQL Workbench\n",
+    "\n",
+    ">> snap install mysql-workbench-community\n",
+    "mysql-workbench-community 8.0.36 from Tonin Bolzan (tonybolzan) installed\n",
+    "\n",
+    "sudo systemctl daemon-reload\n",
+    "This clears the warning about changes to mysql.service unit files.\n",
+    "\n",
+    "### To Set/Reset the MySQL Root Password\n",
+    "Run the following commands in your terminal:\n",
+    "\n",
+    "Login to MySQL as root (with sudo):\n",
+    "\n",
+    "\n",
+    ">>> sudo mysql\n",
+    "\n",
+    "Set a new password for root (replace YourNewPassword! with your own):\n",
+    "\n",
+    "\n",
+    "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'YourNewPassword!';\n",
+    "FLUSH PRIVILEGES;\n",
+    "EXIT;\n",
+    "\n",
+    "🧪 Option 2: Test Login from Terminal\n",
+    "Before trying again in Workbench, test the new password from your terminal:\n",
+    "\n",
+    "\n",
+    ">>> mysql -u root -p\n",
+    "\n",
+    "\n",
+    "\n",
+    "to open the mysql-workbench app via cli\n",
+    "\n",
+    "# >>> mysql-workbench-community\n",
+    "\n",
+    "\n",
+    "Fix Workbench Login\n",
+    "Now re-open MySQL Workbench and:\n",
+    "\n",
+    "Open your saved connection.\n",
+    "\n",
+    "Click the \"Store in Vault...\" or \"Store password\" button.\n",
+    "\n",
+    "Enter the password you just set: YourNewPassword!\n",
+    "\n",
+    "✅ Click Test Connection → it should succeed now!\n",
+    "\n",
+    "\n",
+    "\n",
+    "Step-by-Step: Drop the Database and User\n",
+    "Log into MySQL:\n",
+    "\n",
+    "\n",
+    ">>> sudo mysql -u root -p\n",
+    "\n",
+    "Run the following SQL statements:\n",
+    "\n",
+    "mysql> DROP USER 'devuser'@'localhost';\n",
+    "FLUSH PRIVILEGES;\n",
+    "\n",
+    "Query OK, 0 rows affected (0.01 sec)\n",
+    "\n",
+    "\n",
+    "mysql> SELECT user, host FROM mysql.user WHERE user = 'devuser';\n",
+    "\n",
+    "Empty set (0.00 sec)\n",
+    "\n",
+    "\n",
+    "mysql> SHOW DATABASES;\n",
+    "\n",
+    "+--------------------+\n",
+    "| Database           |\n",
+    "+--------------------+\n",
+    "| information_schema |\n",
+    "| mysql              |\n",
+    "| performance_schema |\n",
+    "| sys                |\n",
+    "| world              |\n",
+    "+--------------------+\n",
+    "5 rows in set (0.00 sec)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "To create a database with new user:\n",
+    "\n",
+    "mysql>\n",
+    "CREATE DATABASE DeeHub_db;\n",
+    "CREATE USER 'DeeHub'@'localhost' IDENTIFIED BY 'addm';\n",
+    "GRANT ALL PRIVILEGES ON DeeHub_db.* TO 'DeeHub'@'localhost';\n",
+    "\n",
+    "Query OK, 0 rows affected (0.01 sec)\n",
+    "\n",
+    "mysql> SHOW DATABASES;\n",
+    "+--------------------+\n",
+    "| Database           |\n",
+    "+--------------------+\n",
+    "| DeeHub_db          |\n",
+    "| information_schema |\n",
+    "| mysql              |\n",
+    "| performance_schema |\n",
+    "| sys                |\n",
+    "| world              |\n",
+    "+--------------------+\n",
+    "6 rows in set (0.01 sec)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
