--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -192,6 +192,36 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21fee9ab",
+   "metadata": {},
+   "source": [
+    "# MySql DB \n",
+    "\n",
+    "--- SUGGESTED CONCEPTS / TOPICS\n",
+    "\n",
+    "Logical operators\n",
+    "Null Handling\n",
+    "String Functions / Data Functions\n",
+    "Filtering Expressions\n",
+    "Aggregate Functions\n",
+    "Grouping\n",
+    "Sorting\n",
+    "Joins\n",
+    "\n",
+    "For Advance users:\n",
+    "\n",
+    "Window functions\n",
+    "Ranking functions\n",
+    "partitioning\n",
+    "Common table expressions\n",
+    "Procedures\n",
+    "Views\n",
+    "tranctions\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
